[gd_scene load_steps=5 format=3 uid="uid://game_ui_scene"]

[ext_resource type="Script" path="res://scenes/ui/game_ui.gd" id="1_script"]
[ext_resource type="PackedScene" path="res://scenes/ui/status_panel.tscn" id="2_status"]
[ext_resource type="PackedScene" path="res://scenes/ui/move_history_panel.tscn" id="3_history"]
[ext_resource type="Theme" path="res://assets/themes/game_theme.tres" id="4_theme"]

[node name="GameUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("4_theme")
script = ExtResource("1_script")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -320.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 40

[node name="MainPanel" type="Panel" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MainPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 20.0
offset_right = -15.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="MarginContainer/MainPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.843, 0, 1)
theme_override_font_sizes/font_size = 32
text = "对局信息"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/MainPanel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="StatusPanel" parent="MarginContainer/MainPanel/VBoxContainer" instance=ExtResource("2_status")]
layout_mode = 2

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/MainPanel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HistoryLabel" type="Label" parent="MarginContainer/MainPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.85, 0.75, 0.8)
theme_override_font_sizes/font_size = 20
text = "走棋记录"
horizontal_alignment = 1

[node name="HistoryPanel" parent="MarginContainer/MainPanel/VBoxContainer" instance=ExtResource("3_history")]
layout_mode = 2
size_flags_vertical = 3

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/MainPanel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ButtonsContainer" type="VBoxContainer" parent="MarginContainer/MainPanel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="NewGameButton" type="Button" parent="MarginContainer/MainPanel/VBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "新游戏"

[node name="UndoButton" type="Button" parent="MarginContainer/MainPanel/VBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "悔棋"

[node name="MenuButton" type="Button" parent="MarginContainer/MainPanel/VBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "返回菜单"

[node name="PauseDialog" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DimBackground" type="ColorRect" parent="PauseDialog"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.6)

[node name="CenterContainer" type="CenterContainer" parent="PauseDialog"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="PauseDialog/CenterContainer"]
custom_minimum_size = Vector2(400, 350)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PauseDialog/CenterContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = 30.0
offset_right = -30.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="TitleLabel" type="Label" parent="PauseDialog/CenterContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.843, 0, 1)
theme_override_font_sizes/font_size = 36
text = "游戏暂停"
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="PauseDialog/CenterContainer/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 55)
layout_mode = 2
text = "继续游戏"

[node name="RestartButton" type="Button" parent="PauseDialog/CenterContainer/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 55)
layout_mode = 2
text = "重新开始"

[node name="ReturnMenuButton" type="Button" parent="PauseDialog/CenterContainer/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 55)
layout_mode = 2
text = "返回主菜单"

[node name="GameOverDialog" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DimBackground" type="ColorRect" parent="GameOverDialog"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="CenterContainer" type="CenterContainer" parent="GameOverDialog"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="GameOverDialog/CenterContainer"]
custom_minimum_size = Vector2(450, 320)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverDialog/CenterContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = 30.0
offset_right = -30.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="TitleLabel" type="Label" parent="GameOverDialog/CenterContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.843, 0, 1)
theme_override_font_sizes/font_size = 42
text = "红方获胜!"
horizontal_alignment = 1

[node name="MessageLabel" type="Label" parent="GameOverDialog/CenterContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.85, 0.75, 0.9)
theme_override_font_sizes/font_size = 22
text = "恭喜红方取得胜利"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="GameOverDialog/CenterContainer/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="PlayAgainButton" type="Button" parent="GameOverDialog/CenterContainer/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 55)
layout_mode = 2
text = "再来一局"

[node name="ExitButton" type="Button" parent="GameOverDialog/CenterContainer/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 55)
layout_mode = 2
text = "返回主菜单"

[connection signal="pressed" from="MarginContainer/MainPanel/VBoxContainer/ButtonsContainer/NewGameButton" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="MarginContainer/MainPanel/VBoxContainer/ButtonsContainer/UndoButton" to="." method="_on_undo_pressed"]
[connection signal="pressed" from="MarginContainer/MainPanel/VBoxContainer/ButtonsContainer/MenuButton" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="PauseDialog/CenterContainer/Panel/VBoxContainer/ResumeButton" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PauseDialog/CenterContainer/Panel/VBoxContainer/RestartButton" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="PauseDialog/CenterContainer/Panel/VBoxContainer/ReturnMenuButton" to="." method="_on_return_menu_pressed"]
[connection signal="pressed" from="GameOverDialog/CenterContainer/Panel/VBoxContainer/PlayAgainButton" to="." method="_on_play_again_pressed"]
[connection signal="pressed" from="GameOverDialog/CenterContainer/Panel/VBoxContainer/ExitButton" to="." method="_on_exit_to_menu_pressed"]
